--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   color: rgb(83, 83, 83);
 }
 .navbar-box {
-    margin-top: 10px;
+    padding-top: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
