--- a/src/Page/Home/Home.css
+++ b/src/Page/Home/Home.css
@@ -4,5 +4,6 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  min-height: 100vh;
+  min-height: 100vh; /* va bene */
+  overflow-x: hidden; /* previene scrollbar orizzontale */
 }
