--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,10 +1,9 @@
 * {
   margin: 0;
   padding: 0;
-  color: rgb(83, 83, 83);
 }
 .navbar-box {
-    padding-top: 10px;
+  padding-top: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,15 +14,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 12px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  height: 40px;
+
 }
 .navbar ul {
   display: flex;
   list-style: none;
   gap: 20px;
+
+}
+.navbar ul li{
+    background: #222222;
+    padding: 8px 12px;;
+    border-radius: 8px;
+    font-size: 16px;
+    color: rgb(156, 163, 175);
+}
+.navbar ul li:hover{
+  color: white;
 }
