--- a/src/Page/Home/Home.css
+++ b/src/Page/Home/Home.css
@@ -1,9 +1,31 @@
-.home {
-  background-color: red;
-  background-image: url("/wallpaper.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  min-height: 100vh; /* va bene */
-  overflow-x: hidden; /* previene scrollbar orizzontale */
+* {
+  margin: 0;
+  padding: 0;
+}
+.home-box {
+display: flex;
+justify-content: flex-start;
+flex-direction: column;
+align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+}
+.home{
+  padding-top: 30px;
+  width: 40%;
+}
+.title{
+  display: flex;
+  justify-content: flex-start;
+}
+.title h1{
+  font-weight: 500;
+}
+.img {
+  padding-top: 40px;
+}
+.img img{
+  width: 300px;
+  border-radius: 12px;
 }
