--- a/src/Page/Home/Home.css
+++ b/src/Page/Home/Home.css
@@ -3,29 +3,38 @@
   padding: 0;
 }
 .home-box {
-display: flex;
-justify-content: flex-start;
-flex-direction: column;
-align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 100vh;
   background-color: black;
 }
-.home{
+.home {
   padding-top: 30px;
   width: 40%;
 }
-.title{
+.title {
   display: flex;
   justify-content: flex-start;
 }
-.title h1{
+.title h1 {
   font-weight: 500;
 }
-.img {
-  padding-top: 40px;
-}
-.img img{
+.img img {
   width: 300px;
   border-radius: 12px;
+}
+.box-d {
+  display: flex;
+  gap: 10px;
+  padding-top: 40px;
+}
+.desc{
+  background: rgba(255, 255, 255, 0.137);
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
